Commit 2: V1 of Pokemon APP

--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
   <title>PokemonApp</title>
 </head>
 <body>
-  
+  <header class="container">
+    <img src="assets/logo.png" alt="Pokemon logo" id="logo">
+    <h1>Pokedex</h1>
+    <div class="search">
+      <input type="text" id="pokemonName" placeholder="Pikachu">
+      <button id="search">🔍</button>
+    </div>
+  </header>
+  <main class="">
+    <section class="pokemon">
+      <!-- <div class="pokemonCard">
+        <h1>Pokemon Name: Pikachu</h1>
+        <h2>Type: Electric</h2>
+        <h2>Height: 4m</h2>
+        <h2>Weight: 20Kg</h2>
+      </div>
+      <div class="pokemonDex">
+        <div class="pokemonImage">
+          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png" alt="Pokemon Image">
+          <h1 style="color: white">Name:</h1>
+        </div>
+        <div>
+          <h2>Abilities:</h2>
+          <h2>Base Exp:</h2>
+        </div>
+      </div> -->
+    </section>
+  </main>
 </body>
 </html>
