Commit 6: Background change, Layout change

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       </div>
       <div class="card-description">
         <h1>Test Value</h1>
-        <p>test value</p>
+        <p>asd.</p>
       </div>
-    </div> -->
+    </div>  -->
   </main>
 </body>
 </html>
